<resources>
    <string name="app_name">IronControl Free</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">Rom Version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"CANCEL\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="about">Welcome to IronMan</string>
    <string name="systemui_prefs">SystemUI Settings</string>
    <string name="phone_prefs">Phone Settings</string>
    <string name="framework_prefs">Framework Preferences</string>
    <string name="settings_prefs">App shortcuts</string>
    <string name="launcher_prefs">Launcher Settings</string>
    <string name="notification_panel_prefs">Notification Panel</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog">Changelog</string>
    <string name="about_us">About us</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description">This action will restore the following items to stock colors</string>
    <string name="multiple_choice_preference_button_done">Done</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="debloat_rom_menu_title">Debloat rom</string>
    <string name="select_all_label">All</string>
    <string name="LightTheme">Light Theme</string>
    <string name="DarkTheme">Dark Theme</string>
    <string name="RestoreData">Restore Data</string>
    <string name="BackupData">Backup Data</string>
    <string name="Icon1">Icon 1</string>
    <string name="Icon2">Icon 2</string>
    <string name="Shown">Shown</string>
    <string name="Hidden">Hidden</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Left">Left Side</string>
    <string name="Right">Right Side</string>
    <string name="Centered">Centered</string>
    <string name="ShowOnTop">Show on top</string>
    <string name="ShowDownBelow">Show down below</string>
    <string name="Regular">Regular</string>
    <string name="Center">Center-mirrored</string>
    <string name="dynamic_status_bar_title">Dynamic status bar</string>
    <string name="dynamic_status_bar_color">Dynamic StatusBar Color</string>
    <string name="dynamic_status_bar_title_summary">Settings to enable and adjust dynamic statusbar</string>
    <string name="dynamic_status_bar_color_title">Dynamic status bar color</string>
    <string name="dynamic_status_bar_color_summary">Automatically update background color of the status bar</string>
    <string name="dynamic_status_bar_gradient_title">Gradient</string>
    <string name="dynamic_status_bar_gradient_summary">Overlay a gradient on the status bar</string>
    <string name="dynamic_status_bar_filter_title">Darkening</string>
    <string name="dynamic_status_bar_filter_summary">Overlay a darkening filter on the status bar</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="dynamic_status_bar_filter_value">The intensity of the darkening filter</string>
    <string name="Stock">Stock</string>
    <string name="Cascade">Cascade</string>
    <string name="OuterCube">Outer Cube</string>
    <string name="InnerCube">Inner Cube</string>
    <string name="Carousal">Carousal</string>
    <string name="Plain">Plain</string>
    <string name="Conveyor">Conveyor</string>
    <string name="Card">Card</string>
    <string name="TurnScreenOff">Turn off the screen</string>
    <string name="PowerMenu">Power menu</string>
    <string name="RecentApplications">Recent applications</string>
    <string name="VolumePlus">Volume  +</string>
    <string name="VolumeMinus">Volume  -</string>
    <string name="Dialer">Dialer</string>
    <string name="GoogleSearch">Google search</string>
    <string name="SoundMode">Sound Mode: Sound / Vibration / Silent</string>
    <string name="Torchlight">Torchlight</string>
    <string name="Screenshot">Screenshot</string>
    <string name="NotificationsPanel">Notifications Panel</string>
    <string name="SwitchWiFi">Switch Wi-Fi</string>
    <string name="SwitchMobileData">Switch Mobile Data</string>
    <string name="SwitchBluetooth">Switch Bluetooth</string>
    <string name="ClearMemory">Clear Memory</string>
    <string name="ToEnd">To End</string>
    <string name="ToStart">To Start</string>
    <string name="CenterHorizontal">Center Horizontal</string>
    <string name="Bold">Bold</string>
    <string name="Italic">Italic</string>
    <string name="BoldItalic">Bold Italic</string>
    <string name="ActualCarrierText">Actual Carrier Text</string>
    <string name="CustomText">Custom Text</string>
    <string name="CenterCrop">Center Crop</string>
    <string name="CenterInside">Center Inside</string>
    <string name="FitXY">Fit XY</string>
    <string name="Image">Image</string>
    <string name="SolidColor">Solid Color</string>
    <string name="Gradient">Gradient</string>
    <string name="TopToBottom">Top to Bottom</string>
    <string name="BottomToTop">Bottom to Top</string>
    <string name="LeftToRight">Left to Right</string>
    <string name="RightToLeft">Right to Left</string>
    <string name="UploadAndDownload">Upload and Download</string>
    <string name="DownloadOnly">Download only</string>
    <string name="UploadOnly">Upload only</string>
    <string name="ToEndOfView">To end of view</string>
    <string name="ToStartOfView">To start of view</string>
    <string name="toast_animation">Toast Animations UI Framework</string>
    <string name="toast_animation_title">Animations</string>
    <string name="PayPalDonation">Donation</string>
    <string name="PayPalSummary">Click to visit</string>
    <string name="PayPalTkkg">PayPal website of Tkkg1994 (Developer)</string>
    <string name="PayPalMyellow">PayPal website of myellow (Designer)</string>
    <string name="PayPalAlex">PayPal website of Alex (Themer)</string>
    <string name="PayPalLeeXxXo">PayPal website of LeeXxXo (Webmaster)</string>
    <string name="PayPalMisterEvo">PayPal website of MisterEvo (Supporter)</string>
    <string name="AboutTkkg" translatable="false">Tkkg1994</string>
    <string name="AboutYellow" translatable="false">myellow</string>
    <string name="AboutAlex" translatable="false">_alex74_</string>
    <string name="AboutMisterEvo" translatable="false">MisterEvo</string>
    <string name="AboutLeeXxXo" translatable="false">LeeXxXo</string>
    <string name="AboutDeveloperSummary">Developer</string>
    <string name="AboutWebsiteSummary">Webmaster/Designer</string>
    <string name="AboutDesignerSummary">Designer</string>
    <string name="AboutSupporterSummary">Supporter</string>
    <string name="AboutRomDevelopers">Rom Developers</string>
    <string name="AboutTelegram">Telegram Links</string>
    <string name="AboutTelegramChatN8">Telegram Chat N8</string>
    <string name="AboutTelegramChatS8">Telegram Chat S8/S8+</string>
    <string name="AboutTelegramChatS7">Telegram Chat S7/S7e</string>
    <string name="AboutTelegramChannel">Telegram News Channel</string>
    <string name="AboutTelegramChatSummary">Chat with us about latest Rom stuff</string>
    <string name="AboutTelegramChannelSummary">Get latest Information about the Rom</string>
    <string name="AboutGrifoDev">GrifoDev Community</string>
    <string name="AboutGrifoDevSummary">New self-made website with forum function</string>
    <string name="AboutXDA">XDA Links to Visit</string>
    <string name="AboutXDAS7Rom" translatable="false">IronMan-Rom SM-G95XF/FD/N</string>
    <string name="AboutXDAS7ERom" translatable="false">IronMan-Rom SM-N950F/FD/N</string>
    <string name="AboutXDAS7SuperKernel" translatable="false">IronKernel SM-G95XF/FD/N SM-N950F/FD/N</string>
    <string name="AboutAFH">Download Links on AFH</string>
    <string name="AboutAFHRom">Download latest IronMan-Rom</string>
    <string name="AboutAFHSuperKernel">Download latest IronKernel</string>
    <string name="AboutAFHCSC">Download latest CSC Selection</string>
</resources>