<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.wubydax.romcontrol.v2.prefs.ImageHeaderPreference app:imageSource="@drawable/iron_logo"/>

    <PreferenceCategory
        android:title="@string/PayPalDonation">
        <PreferenceScreen
            android:icon="@drawable/paypal"
            android:summary="@string/PayPalSummary"
            android:title="@string/PayPalTkkg">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/LucaGrifo" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/paypal"
            android:summary="@string/PayPalSummary"
            android:title="@string/PayPalMyellow">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/YUHS" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/paypal"
            android:summary="@string/PayPalSummary"
            android:title="@string/PayPalAlex">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/AlessandroCerv" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/paypal"
            android:summary="@string/PayPalSummary"
            android:title="@string/PayPalLeeXxXo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/thefr3ak" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/paypal"
            android:summary="@string/PayPalSummary"
            android:title="@string/PayPalMisterEvo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/LSommerfeld" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/AboutGrifoDev">
        <PreferenceScreen
            android:icon="@drawable/gd"
            android:summary="@string/AboutGrifoDevSummary"
            android:title="@string/AboutGrifoDev">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.grifodev.ch/" />
        </PreferenceScreen>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/AboutAFH">
        <PreferenceScreen
            android:icon="@drawable/afh"
            android:title="@string/AboutAFHRom">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.androidfilehost.com/?w=files&amp;flid=224749" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/afh"
            android:title="@string/AboutAFHSuperKernel">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.androidfilehost.com/?w=files&amp;flid=222085" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/afh"
            android:title="@string/AboutAFHCSC">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.androidfilehost.com/?w=files&amp;flid=231378" />
        </PreferenceScreen>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/AboutXDA">
        <PreferenceScreen
            android:icon="@drawable/xda"
            android:title="@string/AboutXDAS7ERom">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/galaxy-note-8/development/rom-ironman-rom-v1-0-0-t3709349" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/xda"
            android:title="@string/AboutXDAS7Rom">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/galaxy-s8/samsung-galaxy-s8--s8-cross-device-development/rom-ironman-rom-v1-0-0-t3710138" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/xda"
            android:title="@string/AboutXDAS7SuperKernel">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/galaxy-note-8/development/kernel-ironkernel-v1-0-1-t3679462" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/AboutRomDevelopers">
        <PreferenceScreen
            android:summary="@string/AboutDeveloperSummary"
            android:title="@string/AboutTkkg">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/member.php?u=5899304" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/AboutDesignerSummary"
            android:title="@string/AboutYellow">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/member.php?u=2639714" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/AboutDesignerSummary"
            android:title="@string/AboutAlex">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/member.php?u=4947202" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/AboutWebsiteSummary"
            android:title="@string/AboutLeeXxXo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/member.php?u=5760756" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/AboutSupporterSummary"
            android:title="@string/AboutMisterEvo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/member.php?u=6499213" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/AboutTelegram">
        <PreferenceScreen
            android:icon="@drawable/telegram"
            android:summary="@string/AboutTelegramChatSummary"
            android:title="@string/AboutTelegramChatN8">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/joinchat/AaNP4EaMI4PgxP4rwLEstg" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/telegram"
            android:summary="@string/AboutTelegramChatSummary"
            android:title="@string/AboutTelegramChatS8">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/joinchat/AaNP4E51FnuFP-WsYWEBiw" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/telegram"
            android:summary="@string/AboutTelegramChatSummary"
            android:title="@string/AboutTelegramChatS7">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/joinchat/AaNP4ETrb1SPY3SuB87GYg" />
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@drawable/telegram"
            android:summary="@string/AboutTelegramChannelSummary"
            android:title="@string/AboutTelegramChannel">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/IronManRom" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
